--- a/source/_posts/如何免费搭建个人博客.md
+++ b/source/_posts/如何免费搭建个人博客.md
@@ -12,11 +12,7 @@ categories: 博客
 
 # 搭建博客(方案：github + Hexo)
 
-1. 创建一个
-2. 32312
-3. 42342342
-
-   GitHub Pages site，具体可以参考[官方文档](https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site#creating-a-repository-for-your-site)
+1. 创建一个GitHub Pages site，具体可以参考[官方文档](https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site#creating-a-repository-for-your-site)
 
    特别注意，创建的repository名字必须是user.github.io
 
@@ -26,7 +22,7 @@ categories: 博客
 
    
 
-4. 本地新建
+2. 本地新建
 
    一个文件夹，执行以下命令，具体可以参考[官方文档](https://hexo.io/zh-cn/index.html)
 
@@ -46,7 +42,7 @@ categories: 博客
 
    
 
-5. 把上一步生成的静态文件public中的内容同步到我们的仓库中
+3. 把上一步生成的静态文件public中的内容同步到我们的仓库中
 
    ```bash
    $ ssh-keygen -t rsa -C "Github的注册邮箱地址" //给github添加ssh
@@ -77,7 +73,7 @@ categories: 博客
 
    
 
-6. 部署成功后，浏览器输入https://user.github.io/，就可以访问你自己的博客啦~~~
+4. 部署成功后，浏览器输入https://user.github.io/，就可以访问你自己的博客啦~~~
 
 
 
